# PteitMusic

./: CMakeLists.txt  MusicGlobals.h  artistslistitem.cpp  artistslistitem.h  artistslistwidget.cpp  downloadpagewidget.cpp  downloadpagewidget.h  genrelistwidget.cpp  genrelistwidget.h  homepage.cpp  homepage.h  likespagewidget.cpp  likespagewidget.h  main.cpp  musicapi.cpp  musicapi.h  playerwidget.cpp  playerwidget.h  playlistshubpagewidget.cpp  playlistshubpagewidget.h  scrollableartistlist.cpp  scrollableartistlist.h  scrollabletracklist.cpp  scrollabletracklist.h  searchpanelwidget.cpp  searchpanelwidget.h  songtracklistitem.cpp  songtracklistitem.h  styles.cpp  styles.h
newBuild/: CMakeLists.txt  MusicGlobals.h  artistslistitem.cpp  artistslistitem.h  artistslistwidget.h  downloadpagewidget.cpp  downloadpagewidget.h  downloadsservice.cpp  downloadsservice.h  historyservice.cpp  historyservice.h  homepage.cpp  homepage.h  likespagewidget.cpp  likespagewidget.h  likesservice.cpp  likesservice.h  main.cpp  musicapi.cpp  musicapi.h  playerservice.cpp  playerservice.h  playerwidget.cpp  playerwidget.h  playlistshubpagewidget.cpp  playlistshubpagewidget.h  playlistsservice.cpp  playlistsservice.h  scrollabletracklist.cpp  scrollabletracklist.h  searchpanelwidget.cpp  searchpanelwidget.h  searchservice.cpp  searchservice.h  songtracklistitem.h  styles.cpp  styles.h
